debsig-verify (0.24) UNRELEASED; urgency=medium

  * Move GnuPG specific macros to the GnuPG backend module.
  * Rename gpgVerify() to sigVerify().
  * Add a new find_command() function.
  * Documentation:
    - Update .gpg keyring references to .pgp in man page.
    - Mention OpenPGP instead of gpg in generic code comments.
  * Test suite:
    - Rename .gpg keyrings to .pgp.
    - Abstract OpenPGP details into debsig_openpgp_* functions.
    - Check OpenPGP backend availability.
    - Add sqop and sq OpenPGP backend support.

 -- Guillem Jover <guillem@debian.org>  Sat, 20 Mar 2021 01:50:00 +0100

debsig-verify (0.23) unstable; urgency=medium

  * Remove unused ‘c’ variable assignment in fgets() call.
  * Packaging:
    - Switch to Standard-Version 4.5.1 (no changes needed).
    - Switch to debhelper compatibility level 13.
    - Update copyright years.

 -- Guillem Jover <guillem@debian.org>  Thu, 24 Dec 2020 22:29:03 +0100

debsig-verify (0.22) unstable; urgency=medium

  * Fix use after free on debug output.
    Reported by Moritz Meintker <moritz@thinksilicon.de>.

 -- Guillem Jover <guillem@debian.org>  Wed, 11 Dec 2019 05:12:02 +0100

debsig-verify (0.21) unstable; urgency=medium

  * Packaging:
    - Do not use dh_auto_configure to configure the source in the
      autopkgtest, as it passes unknown options that emit warnings that
      make the test fail. See: #942813.

 -- Guillem Jover <guillem@debian.org>  Sat, 26 Oct 2019 20:38:50 +0200

debsig-verify (0.20) unstable; urgency=medium

  * Update copyright years.
  * Expand GPLv2 brief notice in debsig-verify man page into the standard
    GPL-2+ notice.
  * Print the temporary directory template in case mkdtemp() fails, instead
    of printing NULL.
  * Build system:
    - Add missing files to the distribution.
    - Generate the .dist-version when creating a dist tarball.
  * Packaging:
    - Bump Standard-Version to 4.4.1 (no changes needed).