@@ -3,6 +3,7 @@ debsig-verify (0.24) UNRELEASED; urgency=medium
   * Move GnuPG specific macros to the GnuPG backend module.
   * Rename gpgVerify() to sigVerify().
   * Add a new find_command() function.
+  * Abstract the OpenPGP operations behind a frontend driver.
   * Documentation:
     - Update .gpg keyring references to .pgp in man page.
     - Mention OpenPGP instead of gpg in generic code comments.
